# OMTG

./: .gitignore  README.md
rl/: pyproject.toml  requirements.txt  sitecustomize.py
rl/omtg_judge/: __init__.py  openai_client.py
rl/omtg_reward/: __init__.py  reward_fn.py  tg_reward.py
rl/omtg_utils/: __init__.py  log_utils.py
rl/scripts/: grpo_4b_coldstart_caption_agent.sh  install_rl.sh
rl/utils/: log_utils.py
sft/: install_qwen3vl.sh  pyproject.toml  qwen3vl_4b_omtg_wcot.yaml  train_qwen3vl.sh
